Changes for 1.6.1.4
* Fixed bug in strategic bombing that allowed strategic bombing of units that can be damaged, which were also being transported. (veqryn)

* Adding scroll bars to notification messages window. (veqryn)

* Increasing max memory from 640mb to 768mb, and up to 896mb for online games. (veqryn)

* Moved all sounds to a specific "era" folder (ww2, preindustrial, classical, future) and changing how sounds are found again, so that there should no longer be any need for duplicate sound files. Now all sounds should come with TripleA, and you can use the "sounds.properties" file to cherry pick which sounds you want. (veqryn)

* Created a "sounds.properties" file which allows you to specify which era of sounds (ww2, preindustrial, classical, future) you are using, and also set up custom sound choices for each sound location path. (veqryn)

* Getting TripleA Map Panel to center on the capital of a player, whenever we switch to a new player's phase. (veqryn)

* Changing getBoundingRect and createTerritoryImage and getTiles so that any polygons on the right or bottom will be translated to be on the negative left or top, hopefully solving issue where the mini territory image was not being displayed properly for territories on both sides of a map divide. (frigoref) 

* Abstracting the Stats panels into AbstractStatPanel so that extending Stats panel (and all of its overhead) is no longer necessary for the EconomyPanel, ObjectivePanel, TerritoryDetailPanel, and other panels. (veqryn)

* Changing Tech Stats Panel to use small flag images for column headers instead of the first letter of nation names. (veqryn)

* Fixing bugs with placing constructions in sea zones. Now constructions can only be "produced" by the territory they are going into. (veqryn)

* Adding a lot more sounds to the engine (zim xero) and some sounds specific to napoleonic empires. (hepster & veqryn)

* Added tutorial on how to make a map and/or map skin. (veqryn)
